# linux-car-os

./: .gitignore  CMakeLists.txt  LIBGPIOD_V2_GUIDE.md  Makefile  README.md  a.out  install_dependencies.sh  install_dependencies_arch.sh
assets/: stations.csv  style.css
concept/: Concept.md  radio.md
src/: bluetooth_manager.hpp  gpio_handler.hpp  gps_handler.hpp  main.cpp  radio_manager.hpp  ui_manager.hpp  virtual_keyboard.hpp
